Fix layout issue table height

--- a/src/components/AppHeader/index.css
+++ b/src/components/AppHeader/index.css
@@ -3,7 +3,6 @@
   color: white;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
   height: 8vw;
   justify-content: center;
   text-align: center;
@@ -14,15 +13,14 @@
   font-family: "Pacifico", cursive;
   font-size: 3vw;
   text-decoration: none;
-
   text-shadow: 0 0 15px #fff, 0 0 20px #49ff18, 0 0 30px #49ff18,
     0 0 40px #49ff18, 0 0 55px #49ff18;
 }
 
 .credits {
   color: white;
-  font-size: 0.5em;
-  margin-top: 1em;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 
 .creditsName {
